# rust-systems-programming

./: README.md
examples/1-crawl/src/: main.rs
examples/2-parsing/: 2-parsing  Cargo.toml
examples/2-parsing/src/: main.rs
examples/3-parsing-log-files/: Cargo.toml  README.md
examples/3-parsing-log-files/src/: main.rs
examples/5-external-programs/: Cargo.toml
examples/5-external-programs/src/: lib.rs  main.rs
examples/6-json/: Cargo.toml  rules.json
examples/6-json/src/: main.rs
examples/7-compliance/src/: main.rs
examples/8-compliance-logic/src/: main.rs
examples/9-exit-status/: Cargo.toml  rules.json
examples/9-exit-status/src/: main.rs
