[package]
name = "rdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"